Fix: Moved drop-down menu arrows slightly up for proper vertical alignment

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -768,13 +768,13 @@ div[data-role=controlgroup] a.ui-btn-active {
     align-items: center;
 }
 
-.trackSelectionFieldContainer>.selectArrowContainer {
-    top: .5em;
+.selectArrowContainer {
+    top: 0em;
+    opacity: .5;
 }
 
-.selectArrowContainer {
-    /* top: .5em; */
-    opacity: .5;
+.trackSelectionFieldContainer>.selectArrowContainer {
+    top: .5em;
 }
 
 .detailSectionContent {
